2006-02-06  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Progress dialog is working now.

2006-02-03  Gautier Portet <kassoulet gmail com>

	* soundconverter.glade: Corrected wrong signal called by the
	  addfolder menuitem.

2006-02-02  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Ouch, fixed broken converter pipeline.
	* soundconverter.glade: Fixed broken progressbar.

2006-02-01  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: We will now use gst_parse_launch() to create a
	  pipeline, since it allows us to be much more flexible. Some issues
	  with progressbar where fixed also.

2006-01-27  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Applied patch to remove stupid pygtk warning at
	  exit. thanks Hanno!

2006-01-24  Gautier Portet <kassoulet gmail com>

	* Makefile: Fixed build on Gentoo. And corrected a typo causing pl and
	  pt to be not installed
	* soundconverter.py|glade: Applied patch with new FileChooser.
	  thanks Regis!

2006-01-21  Gautier Portet <kassoulet gmail com>

	Release 0.8.3
	
	Added Error handling when trying to load files with invalid
	characters...
	
	
	Release 0.8.2

	make install-local #1154
	Pause button #1455

	Unique file #5334
	Folder dropping #5561
	Filtering by mime #5789
	Fixed problem with vbr #5872

	French Translation
	New list display
	UI Changes
	More precise progress bar
	Async tag reading
	Fixed gnomevfs problems with folders


2006-01-21  Gautier Portet <kassoulet gmail com>

	* Makefile: Added translations to build system.
	* fr.po: Updated french translation.
	* soundconverter.glade: Some minors changes.
	* soundconverter.py: Some minors fixes. The UI is now unsensitive
	  when we are converting. Fixed the convert button beiing called
	  when we were unpausing. And that's all!

2006-01-20  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Fixed the convert/stop buttons, and some more
	  minor UI fixes.

2006-01-19  Gautier Portet <kassoulet gmail com>
