@@ -1,3 +1,8 @@
+2006-03-19  Gautier Portet <kassoulet gmail com>
+
+	* soundconverter.py: Files permissions are copied from source file.
+	  Some more code for gstreamer0.10.
+
 2006-02-06  Gautier Portet <kassoulet gmail com>
 
 	* soundconverter.py: Progress dialog is working now.
